button style and logic
when clicked on button move galaxy, the galaxy went there. Fixed it so the buttons are separate from the canvas.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Final Project</title>
     <link rel="stylesheet" href="assets/style.css" />
-    <script src="assets/script.js" defer></script>
   </head>
   <body>
     <div id="p5container"></div>
-  
+    <div id="buttonContainer"></div>    
+    <script src="assets/script.js" defer></script>
+
   </body>
 </html>
