--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="assets/script.js" defer></script>
     <script src="http://unpkg.com/tone" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.39/Tone.js"></script>
   </head>
   <body>
     <div id="p5container"></div>
